# Flight-Simulation

./: .bazelrc  .gitignore  MODULE.bazel  README.md  bazel-Flight-Simulation  bazel-bin  bazel-out  bazel-testlogs
examples/: app
gpinit/: BUILD  camera.h  cone.h  cube.h  cylinder.h  dodecahedron.h  ellipsoid.h  flight.h  gpinit.h  icosahedron.h  oct.h  shader.h  shape.h  tetra.h  torus.h  world.h
main/: BUILD  main.cpp
shaders/: BUILD
src/: CMakeLists.txt
src/include/flight/: Cone.h  Cube.h  Cylinder.h  Dodecahedron.h  Ellipsoid.h  Flight.h  Icosahedron.h  Oct.h  Shape.h  Tetra.h  Torus.h
src/include/other/: camera.h  shader.h
src/src/flight/: flight.cpp
src/src/shader/: phong.frag.glsl
